fixed parallax on site

--- a/index.html
+++ b/index.html
@@ -89,64 +89,66 @@ https://templatemo.com/tm-506-tinker
         </div>
     </section>
 
-    <section id="experience" class="page-section" data-parallax="scroll" data-image-src="img/desertmountaintall.JPG">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/educationalai.png" alt="">
-                        </div>
-                        <h4>Education</h4>
-                        <div class="line-dec"></div>
-                        <p>I am a sohpomore at MIT studying computer science and physics, with interests in a range of subjects.</p>
-                        <div class="primary-white-button">
-                            <a href="experiencepage.html">Continue Reading</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/aiwhite.png" alt="">
-                        </div>
-                        <h4>Northrop Grumman Machine Learning</h4>
-                        <div class="line-dec"></div>
-                        <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep learning systems for signals intelligence.</p>
-                        <div class="primary-white-button">
-                            <a href="experiencepage.html">Continue Reading</a>
+    <div class="parallax-content2" id="experience-background">
+        <section id="experience" class="page-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <div class="icon">
+                                <img src="img/educationalai.png" alt="">
+                            </div>
+                            <h4>Education</h4>
+                            <div class="line-dec"></div>
+                            <p>I am a sohpomore at MIT studying computer science and physics, with interests in a range of subjects.</p>
+                            <div class="primary-white-button">
+                                <a href="experiencepage.html">Continue Reading</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/consulting.png" alt="">
-                        </div>
-                        <h4>MIT Consulting Group</h4>
-                        <div class="line-dec"></div>
-                        <p>I have been consulting for MCG since my freshman year, working with companies small and large.</p>
-                        <div class="primary-white-button">
-                            <a href="experiencepage.html">Continue Reading</a>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <div class="icon">
+                                <img src="img/aiwhite.png" alt="">
+                            </div>
+                            <h4>Northrop Grumman Machine Learning</h4>
+                            <div class="line-dec"></div>
+                            <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep learning systems for signals intelligence.</p>
+                            <div class="primary-white-button">
+                                <a href="experiencepage.html">Continue Reading</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-md-3 col-sm-6 col-xs-12">
-                    <div class="service-item">
-                        <div class="icon">
-                            <img src="img/atomic.png" alt="">
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <div class="icon">
+                                <img src="img/consulting.png" alt="">
+                            </div>
+                            <h4>MIT Consulting Group</h4>
+                            <div class="line-dec"></div>
+                            <p>I have been consulting for MCG since my freshman year, working with companies small and large.</p>
+                            <div class="primary-white-button">
+                                <a href="experiencepage.html">Continue Reading</a>
+                            </div>
                         </div>
-                        <h4>MIT Computational Reactor Physics Group</h4>
-                        <div class="line-dec"></div>
-                        <p>My freshman year in college I worked with the CRPG to write unit and regression tests for reactor code. What's cooler than simulating nuclear physics?</p>
-                        <div class="primary-white-button">
-                            <a href="experiencepage.html">Continue Reading</a>
+                    </div>
+                    <div class="col-md-3 col-sm-6 col-xs-12">
+                        <div class="service-item">
+                            <div class="icon">
+                                <img src="img/atomic.png" alt="">
+                            </div>
+                            <h4>MIT Computational Reactor Physics Group</h4>
+                            <div class="line-dec"></div>
+                            <p>My freshman year in college I worked with the CRPG to write unit and regression tests for reactor code. What's cooler than simulating nuclear physics?</p>
+                            <div class="primary-white-button">
+                                <a href="experiencepage.html">Continue Reading</a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <div id="seperator"></div>
 
@@ -210,91 +212,93 @@ https://templatemo.com/tm-506-tinker
 
     <div id="seperator"></div>
 
-    <section id="photography" data-parallax="scroll" data-image-src="img/rockiesgoatsfrolick.JPG">
-        <div class="content-wrapper">
-            <div class="inner-container container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-12">
-                        <div class="section-heading">
-                            <h4>My Gallery</h4>
-                            <div class="line-dec"></div>
-                            <p>Some pictures from life and travels.</p>
-                            <div class="filter-categories">
-                                <ul class="project-filter">
-                                    <li class="filter" data-filter="all"><span>Show All</span></li>
-                                    <li class="filter" data-filter="places"><span>Places</span></li>
-                                    <li class="filter" data-filter="people"><span>People</span></li>
-                                    <li class="filter" data-filter="nature"><span>Nature</span></li>
-                                </ul>
+    <div class="parallax-content4" id="photography-background">
+        <section id="photography">
+            <div class="content-wrapper">
+                <div class="inner-container container">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12">
+                            <div class="section-heading">
+                                <h4>My Gallery</h4>
+                                <div class="line-dec"></div>
+                                <p>Some pictures from life and travels.</p>
+                                <div class="filter-categories">
+                                    <ul class="project-filter">
+                                        <li class="filter" data-filter="all"><span>Show All</span></li>
+                                        <li class="filter" data-filter="places"><span>Places</span></li>
+                                        <li class="filter" data-filter="people"><span>People</span></li>
+                                        <li class="filter" data-filter="nature"><span>Nature</span></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="projects-holder-3">
-                            <div class="projects-holder">
-                                <div class="row">
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix places">
-                                        <div class="thumb">
-                                        <div class="image">
-                                                <a href="toedit/MITSunset.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300MITSunset.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix people">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/bluehead.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300bluehead.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/snowyrockies.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300snowyrockies.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix nature">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/shenansunset.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300shenansunset.JPG"></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 col-sm-6 project-item mix places">
-                                        <div class="thumb">
-                                            <div class="image">
-                                                <a href="toedit/acadialighthouse.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300acadialighthouse.JPG"></a>
+                        <div class="col-md-8">
+                            <div class="projects-holder-3">
+                                <div class="projects-holder">
+                                    <div class="row">
+                                        <!-- <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb ">
+                                                <div class="image">
+                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
                                                 </div>
+                                            </div>
                                         </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix places">
+                                            <div class="thumb">
+                                            <div class="image">
+                                                    <a href="toedit/MITSunset.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300MITSunset.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix people">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/bluehead.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300bluehead.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/snowyrockies.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300snowyrockies.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix nature">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/shenansunset.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300shenansunset.JPG"></a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6 col-sm-6 project-item mix places">
+                                            <div class="thumb">
+                                                <div class="image">
+                                                    <a href="toedit/acadialighthouse.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300acadialighthouse.JPG"></a>
+                                                    </div>
+                                            </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
@@ -302,8 +306,8 @@ https://templatemo.com/tm-506-tinker
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <div id="seperator"></div>
 
