--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ https://templatemo.com/tm-506-tinker
                             <div class="line-dec"></div>
                             <p>A collection of all my projects.</p>
                             <ul class="tabs clearfix" data-tabgroup="first-tab-group">
-                                <li><a href="#tab1" class="active">Quantum Thermodynamics</a></li>
-                                <li><a href="#tab2">Machine Learning Projects</a></li>
-                                <li><a href="#tab3">Physics Simulations</a></li>
-                                <li><a href="#tab4">Miscellaneous Visuals</a></li>
+                                <li><a href="#tab1" class="active">Physics Simulations</a></li>
+                                <li><a href="#tab2">Data Science and Machine Learning</a></li>
+                                <li><a href="#tab3">Unity Projects</a></li>
+                                <li><a href="#tab4">Miscellaneous</a></li>
                             </ul>
                         </div>
                     </div>
@@ -174,33 +174,29 @@ https://templatemo.com/tm-506-tinker
                             <div id="tab1">
                                 <img src="img/blog_item_01.jpg" alt="">
                                 <div class="text-content">
-                                    <h4>Nulla eget convallis augue</h4>
-                                    <span><a href="#">Digital Marketing</a> / <a href="#">Honey</a> / <a href="#">21 September 2020</a></span>
-                                    <p>Donec interdum scelerisque auctor. Nulla id lorem auctor, bibendum lectus elementum, porta felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                                    <h4>Physics Simulations</h4>
+                                    <p>A collection of physics simulations I've made.</p>
                                 </div>
                             </div>
                             <div id="tab2">
                                 <img src="img/blog_item_02.jpg" alt="">
                                 <div class="text-content">
-                                    <h4>Quisque ultricies maximus</h4>
-                                    <span><a href="#">Branding</a> / <a href="#">David</a> / <a href="#">24 August 2020</a></span>
-                                    <p>Etiam fringilla posuere pretium. Maecenas tempor pellentesque elit in dapibus. Curabitur viverra urna sem, ut sollicitudin sem congue vel. Donec fringilla augue in justo molestie fermentum quis ac mi.</p>
+                                    <h4>Data Science and Machine Learning</h4>
+                                    <p>A collection of projects I've worked on involving data science and machine learning.</p>
                                 </div>
                             </div>
                             <div id="tab3">
                                 <img src="img/blog_item_03.jpg" alt="">
                                 <div class="text-content">
-                                    <h4>Sed vel elit et lorem</h4>
-                                    <span><a href="#">Web Design</a> / <a href="#">William</a> / <a href="#">18 July 2020</a></span>
-                                    <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id ipsum porta, dictum sem sed, bibendum quam. Maecenas mattis risus eget orci rhoncus.</p>
+                                    <h4>Unity</h4>
+                                    <p>A collection of games and simulations I've worked on using unity.</p>
                                 </div>
                             </div>
                             <div id="tab4">
                                 <img src="img/blog_item_04.jpg" alt="">
                                 <div class="text-content">
-                                    <h4>Vivamus purus neque</h4>
-                                    <span><a href="#">E-Commerce</a> / <a href="#">George</a> / <a href="#">14 July 2020</a></span>
-                                    <p>Aliquam erat volutpat. Nulla at nunc nec ante rutrum congue id in diam. Nulla at lectus non turpis placerat volutpat lacinia ut mi. Quisque ultricies maximus justo a blandit. Donec sit amet commodo arcu. Sed sit amet iaculis mi, vel fermentum nisi. Morbi dui enim, vestibulum non accumsan ac, tempor non nisl.</p>
+                                    <h4>Miscellaneous</h4>
+                                    <p>Other small projects I've worked on in the past.</p>
                                 </div>
                             </div>
                         </section>
@@ -383,30 +379,30 @@ https://templatemo.com/tm-506-tinker
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Quisque ullamcorper odio a nisl lacinia dictum. Vestibulum malesuada ipsum in turpis finibus, ut sagittis erat scelerisque. Curabitur non risus fringilla libero accumsan molestie et quis justo. ”</p>
-                                <h4>George Rich</h4>
-                                <span>Marketing Head</span>
+                                <p>“ An unexamined life is not worth living. ”</p>
+                                <h4>Socrates</h4>
+                                <span>Philosopher</span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Suspendisse magna mauris, convallis vel finibus eget, lobortis dictum neque. Nam tincidunt metus nec eros dignissim consectetur. ”</p>
-                                <h4>John Henry</h4>
-                                <span>Art Director</span>
+                                <p>“ Keep your eyes on the stars, and your feet on the ground. ”</p>
+                                <h4>Theodore Roosevelt</h4>
+                                <span>President</span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Aenean semper aliquam est ut maximus. Fusce id diam eget orci lobortis ultricies at ac velit. Curabitur laoreet massa et fringilla sagittis. ”</p>
-                                <h4>Danny Cute</h4>
-                                <span>Founder</span>
+                                <p>“ He who lives in harmony with himself lives in harmony with the universe. ”</p>
+                                <h4>Marcus Aurelius</h4>
+                                <span>Philosopher</span>
                             </div>
                         </div>
                         <div class="item">
                             <div class="testimonials-item">
-                                <p>“ Maecenas eu odio pharetra, elementum lorem eget, efficitur erat. Duis eget justo non nisi iaculis vestibulum. Aliquam erat volutpat. ”</p>
-                                <h4>Richard Beal</h4>
-                                <span>Senior Developer</span>
+                                <p>“ My favorite things in life don't cost any money. It's really clear that the most precious resource we all have is time. ”</p>
+                                <h4>Steve Jobs</h4>
+                                <span>Entrepreneur</span>
                             </div>
                         </div>
                     </div>
@@ -414,6 +410,8 @@ https://templatemo.com/tm-506-tinker
             </div>
         </div>
     </section>
+
+    <div id="seperator"></div>
 
     <div id="map">
     	<!-- How to change your own map point
@@ -425,13 +423,15 @@ https://templatemo.com/tm-506-tinker
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.1756884048896!2d-71.09635404879766!3d42.360094942989576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e370aaf51a6a87%3A0xd0e08ea5b308203c!2sMassachusetts%20Institute%20of%20Technology!5e0!3m2!1sen!2sus!4v1572117494651!5m2!1sen!2sus" width="100%" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
 
+    <div id="seperator"></div>
+
     <footer>
         <div class="container", id="contact">
             <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="logo">
                         <a class="logo-ft scroll-top" href="#">JESUS LARES</a>
-                        <p>Thank you for visiting my personal site. &ii; &#9825; &#871;</p>
+                        <p>Thank you for visiting my personal site. &ii; &#9825; &#871;<br/>Website and Photography &copy; Jesus Lares</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
