updating project site links

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <div class="line-dec"></div>
                             <p>I am a sohpomore at MIT studying computer science and physics, with interests in a range of subjects.</p>
                             <div class="primary-white-button">
-                                <a href="experiencepage.html">Continue Reading</a>
+                                <a href="experiencepage.html">See More</a>
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             <div class="line-dec"></div>
                             <p>In the summer of 2019 I had the pleasure to work on an amazing team at Northrop Grumman building distrubuted deep learning systems for signals intelligence.</p>
                             <div class="primary-white-button">
-                                <a href="experiencepage.html">Continue Reading</a>
+                                <a href="experiencepage.html">See More</a>
                             </div>
                         </div>
                     </div>
@@ -125,7 +125,7 @@
                             <div class="line-dec"></div>
                             <p>I have been consulting for MCG since my freshman year, working with companies small and large.</p>
                             <div class="primary-white-button">
-                                <a href="experiencepage.html">Continue Reading</a>
+                                <a href="experiencepage.html">See More</a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                             <div class="line-dec"></div>
                             <p>My freshman year in college I worked with the CRPG to write unit and regression tests for reactor code. What's cooler than simulating nuclear physics?</p>
                             <div class="primary-white-button">
-                                <a href="experiencepage.html">Continue Reading</a>
+                                <a href="experiencepage.html">See More</a>
                             </div>
                         </div>
                     </div>
@@ -173,6 +173,7 @@
                                 <div class="text-content">
                                     <h4>Physics Simulations</h4>
                                     <p>A collection of physics simulations I've made.</p>
+                                    <a href="physicsprojects.html">See More</a>
                                 </div>
                             </div>
                             <div id="tab2">
@@ -180,6 +181,7 @@
                                 <div class="text-content">
                                     <h4>Data Science and Machine Learning</h4>
                                     <p>A collection of projects I've worked on involving data science and machine learning.</p>
+                                    <a>See More</a>
                                 </div>
                             </div>
                             <div id="tab3">
@@ -187,6 +189,7 @@
                                 <div class="text-content">
                                     <h4>Unity</h4>
                                     <p>A collection of games and simulations I've worked on using unity.</p>
+                                    <a>See More</a>
                                 </div>
                             </div>
                             <div id="tab4">
@@ -194,6 +197,7 @@
                                 <div class="text-content">
                                     <h4>Miscellaneous</h4>
                                     <p>Other small projects I've worked on in the past.</p>
+                                    <a>See More</a>
                                 </div>
                             </div>
                         </section>
@@ -233,7 +237,7 @@
                                         <div class="col-md-6 col-sm-6 project-item mix nature">
                                             <div class="thumb ">
                                                 <div class="image">
-                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
+                                                    <a href="toedit/desertheat.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/desertheat.JPG"></a>
                                                 </div>
                                             </div>
                                         </div>
@@ -241,7 +245,7 @@
                                         <div class="col-md-6 col-sm-6 project-item mix nature">
                                             <div class="thumb">
                                                 <div class="image">
-                                                    <a href="toedit/rockymountaingoats.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/300rockymountaingoats.JPG"></a>
+                                                    <a href="toedit/colorfulcave.JPG" data-lightbox="image-1"><img class = "center-fit" src="toedit/colorfulcave.JPG"></a>
                                                 </div>
                                             </div>
                                         </div>
