added first unity project

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                 <div class="text-content">
                                     <h4>Data Science and Machine Learning</h4>
                                     <p>A collection of projects I've worked on involving data science and machine learning.</p>
-                                    <a>See More</a>
+                                    <a href="dataprojects.html">See More</a>
                                 </div>
                             </div>
                             <div id="tab3">
@@ -189,7 +189,7 @@
                                 <div class="text-content">
                                     <h4>Unity</h4>
                                     <p>A collection of games and simulations I've worked on using unity.</p>
-                                    <a>See More</a>
+                                    <a href="unityprojects.html">See More</a>
                                 </div>
                             </div>
                             <div id="tab4">
@@ -197,7 +197,7 @@
                                 <div class="text-content">
                                     <h4>Miscellaneous</h4>
                                     <p>Other small projects I've worked on in the past.</p>
-                                    <a>See More</a>
+                                    <a href="miscellaneous.html">See More</a>
                                 </div>
                             </div>
                         </section>
