--- a/physicsprojects.html
+++ b/physicsprojects.html
@@ -4,7 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-        <title>Projects</title>
+        <title>Physics Simulations</title>
+
+        <style>
+            :root {
+                --mainColor: rgb(58, 60, 187);
+                --gradColor1:  rgb(10, 11, 41);
+                --gradColor2: rgb(87, 90, 255);
+            }
+        </style>
+
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
