updated projects, about me

--- a/about/aboutme.html
+++ b/about/aboutme.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<div>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -15,6 +15,10 @@
                 --mainColor: rgb(0, 13, 133);
                 --gradColor1:  rgb(0, 13, 133);
                 --gradColor2: rgb(255, 102, 0);
+            }
+
+            #tech-known-title {
+                text-align: center;
             }
 
         </style>
@@ -34,8 +38,16 @@
 
         <div class="textholder"><h2>Who am I?</h2></div>
 
-        <div class="textholder">
-        <p>Hello I am jesus lol.</p>
+        <div class='textholder-p'>
+        <div class='text'>
+        <p>My name is Jesus Lares, I am currently a sophomore at MIT studying physics and computer science. I have always striven to work alongside my passions. Whether that be in an idea, a community, or a personal goal, it is this which drives me; I have never followed the grain searching to fit in. I find the deepest satisfaction to be had in work that I wholeheartedly enjoy. That being said, I understand that passion alone is only a necessary condition.<br><br>
+
+        I value determination and self-discipline. I firmly believe that, with these two traits, any obstacle in life, no matter how big or how small, can be overcome. I also like to create. I often search for jobs where I can interplay creativity with craftsmanship. Particularly, this is why I am interested in fields such as computer science, phyiscs, and engineering. I enjoy interpreting problems, viewing them from a range of perspectives, and coming up with innovative solutions. I love making Unity projects, such as games and simulations. I find it so satisfying to make proper visualizations of interesting concepts in this manner.
+        Likewise, I love making visualizations for datasets. However, my passion for data science truly comes from the exploration of the data itself: finding surprising trends and predictions. Data science often feels like I am using a computer to go beyond my human limitations; leveraging the power of computation to get a hint about some complicated trend - it is truly wonderful!<br><br>
+
+        I strive to be a leader. In my opinion, very few things of true value have been done by one person alone. I value cooperation, and the opinions of those around me. I try to understand others, and pass no judgement over their beliefs or ideas, regardless of my own - I put myself in their shoes. I will take every possible precaution and then act - never letting apprehension impede action. In my spare time, I have been working towards a private pilot's license. While learning to fly, fear and stress can easily take a hold of you – yet this agitation is underscored by the tranquility of floating in the clouds, and the wonder of seeing the entire world below you. This balance is something which seems to touch on much of life: focus and self-management in the moment will keep your head above the clouds long enough to think and see clearly; long enough to plot a forward course. 
+        </p>
+        </div>
         </div>
 
         <div class="textholder"><h2>Education</h2></div>
@@ -43,31 +55,105 @@
         <div class="card">
         <div class="container">
             <h4><b>Massachusetts Institute of Technology</b><br>Bachelor of Science in Computer Science and Physics with a minor in Economics</h4>
-            <h5>September 2018 - June 2022</h5>
+            <h5>September 2018 - June 2022<br>GPA: 4.8</h5>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
-            <h4><b>Computer Science</b><br></h4>
-            <h5></h5>
-            <p></p>
+            <h4><b>Computer Science</b></h4>
+            <p>Hello There</p>
         </div>
         </div>
 
         <div class="card">
         <div class="container">
-            <h4><b>Technologies Known</b><br></h4>
+            <h4 id='tech-known-title'><b>Relavant Technologies Known</b><br></h4>
+
+            <div class='col-wrapper'>
+
+            <div class='column'>
             <h6>Python - Profficient</h6>
-            <progress max="100" value="77"></progress>
+            <progress max="100" value="90"></progress>
             <h6>SQL - Intermediate</h6>
-            <progress max="100" value="77"></progress>
+            <progress max="100" value="50"></progress>
+            <h6>Java - Intermediate</h6>
+            <progress max="100" value="50"></progress>
+            <h6>Numpy - Profficient</h6>
+            <progress max="100" value="85"></progress>
+            <h6>Tensorflow - Profficient</h6>
+            <progress max="100" value="80"></progress>
+            <h6>Keras - Profficient</h6>
+            <progress max="100" value="80"></progress>
+            <h6>Scikit - Profficient</h6>
+            <progress max="100" value="80"></progress>
+            <h6>MatPlotLib - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>MxNet - Intermediate</h6>
+            <progress max="100" value="50"></progress>
+            <h6>Bash - Profficient</h6>
+            <progress max="100" value="60"></progress>
+            <h6>Kubernetes - Basic</h6>
+            <progress max="100" value="30"></progress>
+            </div>
+
+            <div class='column'>
+            <h6>HTML - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>CSS - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>Javascript - Basic</h6>
+            <progress max="100" value="30"></progress>
+            <h6>Unity - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>C# - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>Git - Profficient</h6>
+            <progress max="100" value="80"></progress>
+            <h6>Docker - Profficient</h6>
+            <progress max="100" value="70"></progress>
+            <h6>Kafka - Intermediate</h6>
+            <progress max="100" value="50"></progress>
+            <h6>Maven - Intermediate</h6>
+            <progress max="100" value="40"></progress>
+            <h6>Mathematica - Intermediate</h6>
+            <progress max="100" value="50"></progress>
+            <h6>Matlab - Intermediate</h6>
+            <progress max="100" value="50"></progress>
+            </div>
+
+            </div>
+
         </div>
         </div>
 
         <div class="card">
         <div class="container">
-            <h4><b></b><br></h4>
+            <h4><b>Physics</b></h4>
+            <p>Hello There</p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Technical Courses Taken</b></h4>
+            <p>Here are some relevant and interesting courses I have taken at MIT! This list is limited to the computer science, physics, 
+            and math classes I have taken.</p>
+            <a href='../experiencepages/education.html'>Link to coursework</a>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Economics</b></h4>
+            <h5>and Consulting</h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Language</b></h4>
             <h5></h5>
             <p></p>
         </div>
@@ -75,7 +161,7 @@
 
         <div class="card">
         <div class="container">
-            <h4><b></b><br></h4>
+            <h4><b>Philosophy</b></h4>
             <h5></h5>
             <p></p>
         </div>
@@ -83,7 +169,7 @@
 
         <div class="card">
         <div class="container">
-            <h4><b></b><br></h4>
+            <h4><b>History</b></h4>
             <h5></h5>
             <p></p>
         </div>
@@ -91,7 +177,15 @@
 
         <div class="card">
         <div class="container">
-            <h4><b></b><br></h4>
+            <h4><b>Literature</b></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Favorite Books</b><br></h4>
             <h5></h5>
             <p></p>
         </div>
@@ -101,8 +195,65 @@
 
         <div class="card">
         <div class="container">
-            <h4><b>6.036 - Introduction to Machine Learning</b></h4>
-            <p>Introduces principles, algorithms, and applications of machine learning from the point of view of modeling and prediction; formulation of learning problems; representation, over-fitting, generalization; clustering, classification, probabilistic modeling; and methods such as support vector machines, hidden Markov models, and neural networks</p>
+            <h4><b>Exploring</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Activity</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Flying</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Photography</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Storytelling</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Video Games</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Favorite Books</b><br></h4>
+            <h5></h5>
+            <p></p>
+        </div>
+        </div>
+
+        <div class="card">
+        <div class="container">
+            <h4><b>Mental Math and Memorization</b><br></h4>
+            <h5></h5>
+            <p></p>
         </div>
         </div>
 
