--- a/projectpages/physicsprojects.html
+++ b/projectpages/physicsprojects.html
@@ -29,26 +29,16 @@
 
         <div class="row">
             <div class="block">
-                <div id='block-name-link'><a id='name-link' href='#'>Charged Particles</a></div>
-                <div id= 'block-img-link'><a href="#"><img src="img_projects/charged_particles.jpg"></img></a></div>
+                <div id='block-name-link'><a id='name-link' href='../projects/EMColors/index.html'>Charged Particles</a></div>
+                <div id= 'block-img-link'><a href="../projects/EMColors/index.html"><img src="../img_projects/coulombsimulation.PNG"></img></a></div>
             </div>
-
-            <div class="block"></div>
-            <div class="block"></div>
-            <div class="block"></div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="block">Ho</div>
             <div class="block">Ho</div>
             <div class="block">Ho</div>
             <div class="block">Ho</div>
-        </div>
-
-        <div class="row">
-            <div class="block">He</div>
-            <div class="block">He</div>
-            <div class="block">He</div>
-        </div>
+        </div> -->
 
     </body>
